# portal-captive-small

./: .gitattributes  .gitignore  AGENTS.md  CHANGE.md  Justfile  Makefile  PLAN.md  README.md  RELEASE.md
.githooks/: pre-commit  pre-push
.github/workflows/: build-and-release.yml  ci-quality.yml  release-from-package.yml  security-scan.yml
backend/: Makefile
backend/rust/database-conector-sqlite/: Cargo.toml
backend/rust/database-conector-sqlite/src/: lib.rs  main.rs
config/: portal-config.toml  templates-config.toml
config/templates/: airport.toml  cafe.toml  community_mesh.toml  coworking.toml  event.toml  gaming.toml  gym.toml  hospital.toml  hotel.toml  library.toml  mall.toml  restaurant.toml  school.toml  university.toml
containers/: Makefile
containers/docker/: Dockerfile.auth-service  Dockerfile.mosquitto  Dockerfile.rust-sqlite  compose.yaml
containers/lxc/: portal-captive.conf
docs/: 01-architecture.md  02-data-model.md  03-deployment-rpi3b.md  04-release-and-ci.md  05-config-toml.md  06-auth-service-api.md  07-db-mqtt-rust-worker.md  08-rpi3b-lxc-smoke.md  09-rpi3b-lxc-incident-specnative.md
frontend/: Makefile
scripts/: Makefile
scripts/commons/: Makefile
scripts/config/: Makefile  rpi3b-ufw-lxc-network.sh
scripts/docker/: build.sh  stack.sh
scripts/git/: Makefile  install-githooks.sh  pre-commit-lint.sh  pre-push-checks.sh  quality-local.sh  tag-create.sh  uninstall-githooks.sh
scripts/install/: Makefile  rpi3b-direct-install.sh  rpi3b-lxc-install.sh  rpi3b-prepare-lxc.sh  script-install.sh
sql/: Makefile
(+54 files in other folders)
